initialSetup/main/default/objects/Patient_Site__c/Patient_Site__c.object-meta.xml
<CustomObject>
    <label>Patient Site</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Patient Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>