initialSetup/main/default/objects/Patient_Site__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <label>Healthcare Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Patient Sites</relationshipLabel>
    <relationshipName>Patient_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>