initialSetup/main/default/objects/Patient_Site__c/fields/PCP__c.field-meta.xml
<CustomField>
    <fullName>PCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Sites (PCP)</relationshipLabel>
    <relationshipName>Patient_Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>