initialSetup/main/default/objects/Patient_Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Healthcare_Facility__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Patient__c</columns>
    <columns>Enrollment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>